# Pinboard

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/v1/: __init__.py  accounts.py  images.py
apps/accounts/: admin.py  apps.py  forms.py  managers.py  pipeline.py  tasks.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: __init__.py  follow.py  profile.py  user.py
apps/accounts/selectors/: users.py
apps/accounts/services/: auth.py  follow.py  profile.py
apps/activity/: apps.py  models.py  selectors.py  services.py  urls.py  views.py
apps/images/: admin.py  apps.py  forms.py  tasks.py  urls.py  urls_home.py  views.py
apps/moderation/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/notifications/: apps.py  consumers.py  context_processors.py  models.py  services.py  urls.py  views.py
apps/search/: apps.py  services.py  urls.py  views.py
config/: asgi.py  urls.py
config/settings/: base.py  development.py  production.py  testing.py
docker/django/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
infrastructure/: celery.py  storage.py
shared/: cache.py  exceptions.py  pagination.py  validators.py
shared/models/: __init__.py  base.py  managers.py
shared/utils/: images.py  slugify.py
templates/: base.html
templates/components/: collection_card.html  follow_button.html  image_card.html  image_grid.html  navbar.html
tests/: conftest.py
tests/api/: test_images_api.py
tests/factories/: accounts.py  images.py
tests/integration/: test_account_views.py  test_collection_views.py  test_image_views.py
tests/unit/: test_auth_service.py  test_collection_service.py  test_engagement_service.py  test_follow_service.py
(+39 files in other folders)
