[project]
name = "pinboard"
version = "0.1.0"
description = "Production-grade social image bookmarking platform"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.3",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "celery[redis]>=5.4",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    "django-storages[s3]>=1.14",
    "pillow>=11.0",
    "python-decouple>=3.8",
    "structlog>=24.4",
    "djangorestframework-simplejwt>=5.3",
    "social-auth-app-django>=5.4",
    "django-taggit>=6.1",
    "django-ratelimit>=4.1",
    "django-htmx>=1.21",
    "httpx>=0.28",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.32",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "faker>=33.0",
    "ruff>=0.8",
    "black>=24.0",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "django-debug-toolbar>=4.4",
    "ipython>=8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.isort]
known-first-party = ["apps", "shared", "config", "infrastructure", "api"]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "--reuse-db --cov=apps --cov=shared --cov-report=term-missing"

[tool.coverage.run]
source = ["apps", "shared", "api"]
omit = ["*/migrations/*", "*/tests/*", "*/__init__.py"]

[tool.coverage.report]
skip_empty = true
